--- a/xygine/xygine.vcxproj.filters
+++ b/xygine/xygine.vcxproj.filters
@@ -281,5 +281,8 @@
     <ClInclude Include="include\xygine\Difficulty.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\xygine\Assert.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
