add affector classes to particle editor add previewing particle systems to particle editor fix assertion test error in ParticleSystem

--- a/ParticleEditor/ParticleEditor.csproj
+++ b/ParticleEditor/ParticleEditor.csproj
@@ -70,6 +70,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Affectors.cs" />
+    <Compile Include="EventHandlers.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="MainWindow.cs">
       <SubType>Form</SubType>
     </Compile>
