add options state to example app add parsing xyp files to particle definition class

--- a/Example/Example.vcxproj.filters
+++ b/Example/Example.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="include\StateIds.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\MenuOptionState.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Game.cpp">
@@ -33,6 +36,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\MenuMainState.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\MenuOptionState.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
