--- a/Example/Example.vcxproj
+++ b/Example/Example.vcxproj
@@ -72,12 +72,14 @@
   <ItemGroup>
     <ClInclude Include="include\Game.hpp" />
     <ClInclude Include="include\MenuMainState.hpp" />
+    <ClInclude Include="include\MenuOptionState.hpp" />
     <ClInclude Include="include\StateIds.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Game.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\MenuMainState.cpp" />
+    <ClCompile Include="src\MenuOptionState.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
