add demo states for particles and physics to example application

--- a/Example/CMakeLists.txt
+++ b/Example/CMakeLists.txt
@@ -61,7 +61,9 @@ SET(EXAMPLE_SRC
   src/Game.cpp
   src/main.cpp
   src/MenuMainState.cpp
-  src/OptionMenuState.cpp)
+  src/OptionMenuState.cpp
+  src/ParticleDemoState.cpp
+  src/PhysicsDemoState.cpp)
 
 if(WIN32)
   add_executable(xygine_example WIN32 ${EXAMPLE_SRC} ${xygine_SRC})
