add physics world class update header guard format update UI index value to fix some value type warnings

--- a/Example/Example.vcxproj
+++ b/Example/Example.vcxproj
@@ -45,6 +45,7 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <AdditionalIncludeDirectories>include;../xygine/include</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>_DEBUG_;_MBCS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
