add collision shape classes for boxes and circles

--- a/xygine/src/CMakeLists.txt
+++ b/xygine/src/CMakeLists.txt
@@ -13,6 +13,9 @@ set(xygine_SRC
   ${xygine_DIR}/Music.cpp
   ${xygine_DIR}/ParticleController.cpp
   ${xygine_DIR}/ParticleSystem.cpp
+  ${xygine_DIR}/PhysicsCollisionShape.cpp
+  ${xygine_DIR}/PhysicsCollisionCircleShape.cpp
+  ${xygine_DIR}/PhysicsCollisionRectangleShape.cpp
   ${xygine_DIR}/PhysicsRigidBody.cpp
   ${xygine_DIR}/PhysicsWorld.cpp
   ${xygine_DIR}/PostBloom.cpp
