--- a/xygine/src/CMakeLists.txt
+++ b/xygine/src/CMakeLists.txt
@@ -18,6 +18,7 @@ set(xygine_SRC
   ${xygine_DIR}/PhysicsCollisionEdgeShape.cpp
   ${xygine_DIR}/PhysicsCollisionPolygonShape.cpp
   ${xygine_DIR}/PhysicsCollisionRectangleShape.cpp
+  ${xygine_DIR}/PhysicsDebugDrawer.cpp
   ${xygine_DIR}/PhysicsRigidBody.cpp
   ${xygine_DIR}/PhysicsWorld.cpp
   ${xygine_DIR}/PostBloom.cpp
