add debug flags to cmake files fix default values of physics collision mask add distance joint class

--- a/Example/CMakeLists.txt
+++ b/Example/CMakeLists.txt
@@ -9,14 +9,6 @@ SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/modules/")
 SET(xygine_example_STATIC_SFML FALSE CACHE BOOL "Choose whether SFML is linked statically or not.")
 SET(xygine_example_STATIC_RUNTIME FALSE CACHE BOOL "Use statically linked standard/runtime libraries? This option must match the one used for SFML.")
 
-#use if you prefer clang, comment out if using g++ (4.9+)
-#SET(CMAKE_C_COMPILER    "/usr/bin/clang")
-#SET(CMAKE_CXX_COMPILER  "/usr/bin/clang++")
-#SET(CMAKE_AR            "/usr/bin/llvm-ar")
-#SET(CMAKE_LINKER        "/usr/bin/llvm-ld")
-#SET(CMAKE_NM            "/usr/bin/llvm-nm")
-#SET(CMAKE_OBJDUMP       "/usr/bin/llvm-objdump")
-#SET(CMAKE_RANLIB        "/usr/bin/llvm-ranlib")
 
 if(CMAKE_COMPILER_IS_GNUCXX)
   if(xygine_example_STATIC_RUNTIME)
@@ -25,6 +17,9 @@ if(CMAKE_COMPILER_IS_GNUCXX)
     SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++1y")
   endif()
 endif()
+
+SET (CMAKE_CXX_FLAGS_DEBUG "-g -_DEBUG_")
+SET (CMAKE_CXX_FLAGS_RELEASE "-O4 -DNDEBUG")
 
 if(xygine_example_STATIC_SFML)
   SET(SFML_STATIC_LIBRARIES TRUE)
