--- a/xygine/xygine.vcxproj
+++ b/xygine/xygine.vcxproj
@@ -96,6 +96,7 @@
     <ClCompile Include="src\ParticleController.cpp" />
     <ClCompile Include="src\ParticleSystem.cpp" />
     <ClCompile Include="src\PhysicsDebugDrawer.cpp" />
+    <ClCompile Include="src\PhysicsJointDistance.cpp" />
     <ClCompile Include="src\PhysicsRigidBody.cpp" />
     <ClCompile Include="src\PhysicsWorld.cpp" />
     <ClCompile Include="src\PostBloom.cpp" />
@@ -149,6 +150,8 @@
     <ClInclude Include="include\xygine\physics\CollisionRectangleShape.hpp" />
     <ClInclude Include="include\xygine\physics\CollisionShape.hpp" />
     <ClInclude Include="include\xygine\physics\DebugDrawer.hpp" />
+    <ClInclude Include="include\xygine\physics\Joint.hpp" />
+    <ClInclude Include="include\xygine\physics\JointDistance.hpp" />
     <ClInclude Include="include\xygine\physics\RigidBody.hpp" />
     <ClInclude Include="include\xygine\physics\World.hpp" />
     <ClInclude Include="include\xygine\PostBloom.hpp" />
