add slider joint

--- a/xygine/xygine.vcxproj
+++ b/xygine/xygine.vcxproj
@@ -99,6 +99,7 @@
     <ClCompile Include="src\PhysicsJointDistance.cpp" />
     <ClCompile Include="src\PhysicsJointFriction.cpp" />
     <ClCompile Include="src\PhysicsJointHinge.cpp" />
+    <ClCompile Include="src\PhysicsJointSlider.cpp" />
     <ClCompile Include="src\PhysicsRigidBody.cpp" />
     <ClCompile Include="src\PhysicsWorld.cpp" />
     <ClCompile Include="src\PostBloom.cpp" />
@@ -156,6 +157,7 @@
     <ClInclude Include="include\xygine\physics\JointDistance.hpp" />
     <ClInclude Include="include\xygine\physics\JointFriction.hpp" />
     <ClInclude Include="include\xygine\physics\JointHinge.hpp" />
+    <ClInclude Include="include\xygine\physics\JointSlider.hpp" />
     <ClInclude Include="include\xygine\physics\RigidBody.hpp" />
     <ClInclude Include="include\xygine\physics\World.hpp" />
     <ClInclude Include="include\xygine\PostBloom.hpp" />
