add wheel joint

--- a/xygine/src/CMakeLists.txt
+++ b/xygine/src/CMakeLists.txt
@@ -23,6 +23,7 @@ set(xygine_SRC
   ${xygine_DIR}/PhysicsJointFriction.cpp
   ${xygine_DIR}/PhysicsJointHinge.cpp
   ${xygine_DIR}/PhysicsJointSlider.cpp
+  ${xygine_DIR}/PhysicsJointWheel.cpp
   ${xygine_DIR}/PhysicsRigidBody.cpp
   ${xygine_DIR}/PhysicsWorld.cpp
   ${xygine_DIR}/PostBloom.cpp
